# vs

./: .gitignore  CMakeLists.txt
Blatt01/src/: daytime.c
Blatt02/src/: http_serv.c
Blatt02/src/docroot/: der_werwolf.html  der_werwolf.txt
Blatt03/Demo/: README.md  check_host.c  makefile
Blatt03/src/client/: udp_client.c  udp_client.cpp
Blatt03/src/server/: Sample_klein.txt  udp_server.c  udp_server.cpp
Blatt04/Schablone/: Makefile  pub_sub_client.cc  pub_sub_config.h  pub_sub_deliv.proto  pub_sub_receiver.cc  pub_sub_server.cc
Blatt04/src/: Makefile  pub_sub_client.cc  pub_sub_config.h  pub_sub_receiver.cc  pub_sub_server.cc
Blatt04/src/protos/: pub_sub.proto  pub_sub_common.proto
Blatt05/src/: Makefile  README.md  hash_create  hash_create.cpp  hashes.txt  hashing.cpp  pub_sub_client.cc  pub_sub_common.pb.h  pub_sub_config.h  pub_sub_receiver.cc  pub_sub_server.cc
Blatt05/src/Hashing/: hashes.txt  sha_hashing.c
Blatt05/src/protos/: pub_sub.proto  pub_sub_common.proto
Blatt06/Client/src/: ChatProxy.java  ClientProxy.java  ClientProxyImpl.java  Main.java
Blatt06/Server/src/: ChatServer.java  ChatServerImpl.java  Main.java
Blatt06/src/: timer.policy
Blatt06/src/Client/: ClientProxy.java  ClientProxyImpl.java  Main.java
Blatt06/src/Connection/: ChatProxyImpl.java
Blatt06/src/Server/: ChatServerImpl.java
Blatt07/: .gitignore  pom.xml
Blatt07/Demo1/webapp/: AjaxAddressExample.html  CalcExample.html  CalcExample.jsp  CalculatorWithBean.jsp  (+7 more)
Blatt07/src/: chat.html
Blatt08/: pom.xml
Blatt09/: pom.xml
Blatt09/web/: client.js  index.html
(+68 files in other folders)
